--- a/desktop.css
+++ b/desktop.css
@@ -40,6 +40,8 @@
     	border-spacing: 0;
 	}
 	.ui-datepicker {
+		left:35%;
+		position:absolute;
     	display: none;
     	width: 330px;
     	padding: 30px 35px 30px 25px;
@@ -195,15 +197,25 @@
 	
 	/* Login Container */
 	.loginContainer {
+		/*
 		height:768px;
 		width:1024px;
-		background:url("matrixbackground.jpg");
+		*/
+		height:100%;
+		width:100%;
+		
+		background:url("dragonbg.jpg");
+		background-position: center;
+		
 		border:4px black solid;
 		border-radius:10px 10px 10px 10px;
 	}
 	
 	/* Login Container Menu */
-	.loginContainerMenu {		
+	.loginContainerMenu {	
+		position:absolute;
+		
+		
 		width:40%;
 		height:30%;
 		border: 3px AliceBlue solid;
@@ -265,12 +277,21 @@
 	
 	/* Desktop Container */
 	.desktopContainer {		
+		/*
 		height:768px;
 		width:1024px;
+		*/
+		height:100%;
+		width:100%;
+
+		
 		background:url("dragonbg.jpg");
+		background-position: center;
+		background-repeat: no-repeat;
+		
 		border:4px black solid;
 		border-radius:10px 10px 10px 10px;
-		position:relative;
+		position:absolute;
 		display:none;
 		z-index:0;
 	}
@@ -294,8 +315,14 @@
 	
 	/* desktop Container Desktop Pages */
 	.desktopContainerDesktopPages {		
+		/*
+		
 		height:715px;
 		width:1024px;
+		*/
+		height:100%;
+		width:100%;
+		
 		position:absolute;
 		background-color:transparent;
 		top:25px;
