--- a/desktop.css
+++ b/desktop.css
@@ -204,10 +204,11 @@
 		height:100%;
 		width:100%;
 		
+		/*
 		background:url("dragonbgLarge.jpg") important;
 		background-position: center;
 		background-repeat: no-repeat;
-		
+		*/
 		border:4px black solid;
 		border-radius:10px 10px 10px 10px;
 	}
